--- a/BTL/phase1/.vscode/settings.json
+++ b/BTL/phase1/.vscode/settings.json
@@ -11,6 +11,19 @@
         "limits": "cpp",
         "sstream": "cpp",
         "system_error": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ostream": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "istream": "cpp",
+        "functional": "cpp",
+        "type_traits": "cpp",
+        "tuple": "cpp",
+        "memory": "cpp",
+        "iomanip": "cpp",
+        "numeric": "cpp",
+        "streambuf": "cpp",
+        "utility": "cpp",
+        "algorithm": "cpp"
     }
 }
